--- a/ebook-react/index.html
+++ b/ebook-react/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jamund's E-Book Store</title>
+    <title>PayPal Developer E-Book</title>
   </head>
   <body>
     <div id="root"></div>
